--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -17,24 +17,24 @@ scrolling:
 draw_bold_text_with_bright_colors: false
 font:
   normal:
-    family: kakwafont
+    family: Anka/Coder
     style:  Regular
   bold:
-    family: kakwafont
+    family: Anka/Coder
     style:  Bold
   italic:
-    family: kakwafont
+    family: Anka/Coder
     style:  Regular
   bold-italic:
-    family: kakwafont
+    family: Anka/Coder
     style:  Bold
   size: 8
   offset:
     x: 0
-    y: 0
+    y: -1
   glyph_offset:
     x: 0
-    y: 0
+    y: -1
 
 colors:
   # Default colors
