--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -17,24 +17,24 @@ scrolling:
 draw_bold_text_with_bright_colors: false
 font:
   normal:
-    family: Anka/Coder
-    style:  Regular
+    family: Monoid
+    style:  Retina
   bold:
-    family: Anka/Coder
-    style:  Bold
+    family: Monoid
+    style:  Retina
   italic:
-    family: Anka/Coder
-    style:  Regular
+    family: Monoid
+    style:  Retina
   bold-italic:
-    family: Anka/Coder
-    style:  Bold
-  size: 8
+    family: Monoid
+    style:  Retina
+  size: 7
   offset:
     x: 0
-    y: -1
+    y: 0
   glyph_offset:
     x: 0
-    y: -1
+    y: 0
 
 colors:
   # Default colors
