misc theme-related changes (wide fucking awake at 4 AM)

--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -31,10 +31,11 @@
             "warning": 30,
             "critical": 15
         },
-        "format": "Bat {capacity}%",
-        "format-charging": "Chr {capacity}%",
-        "format-plugged": "Ful {capacity}% ",
-        "format-alt": "{time}"
+        "format": "{capacity}%",
+        "format-charging": "{capacity}%",
+        "format-plugged": "{capacity}% "
+	//,
+        // "format-alt": "{time}"
     },
 
     "clock": {
