Massive overhaul and error fixes for Emacs

--- a/.config/fnott/fnott.ini
+++ b/.config/fnott/fnott.ini
@@ -19,11 +19,11 @@ max-icon-size=32
 background=3f5f3f
 border-color=909090
 border-size=1
-title-font=xos4 Terminus:weight=Bold:size=12
+title-font="Terminus (TTF):style=Bold:size=12"
 title-color=ffffff
-summary-font=xos4 Terminus:size=9
+summary-font="Terminus (TTF):size=9"
 summary-color=ffffff
-body-font=sans serif
+body-font="Terminus (TTF):size=9"
 body-color=ffffff
 # timeout
 default-timeout=10
