--- a/.config/sway/config
+++ b/.config/sway/config
@@ -220,8 +220,8 @@ bindsym $mod+r mode "resize"
 #
 # FN keys:
 #
-bindsym XF86MonBrightnessDown exec "backlight decr"
-bindsym XF86MonBrightnessUp exec "backlight incr"
+bindsym XF86MonBrightnessDown exec "light -U 10"
+bindsym XF86MonBrightnessUp exec "light -A 10"
 
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
