--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -17,18 +17,18 @@ scrolling:
 draw_bold_text_with_bright_colors: false
 font:
   normal:
-    family: Terminus (TTF)
+    family: Hack
     style:  Medium
   bold:
-    family: Terminus (TTF)
+    family: Hack
     style:  Bold
   italic:
-    family: Terminus (TTF)
+    family: Hack
     style:  Italic
   bold-italic:
-    family: Terminus (TTF)
+    family: Hack
     style:  Bold Italic
-  size: 9
+  size: 8
   offset:
     x: 0
     y: 0
