--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -14,4 +14,6 @@ gtk-xft-antialias=1
 gtk-xft-hinting=1
 gtk-xft-hintstyle=hintslight
 gtk-xft-rgba=rgb
-gtk-key-theme-name = Emacs
+# gtk-key-theme-name=Emacs
+gtk-application-prefer-dark-theme=0
+gtk-modules="appmenu-gtk-module"
