--- a/.config/sway/config
+++ b/.config/sway/config
@@ -21,7 +21,7 @@ set $term alacritty
 # set $menu dmenu_path | dmenu | xargs swaymsg exec --
 # set $menu wofi --show run | xargs swaymsg exec --
 # set $menu "fuzzel -f 'M+ 1mn:size=10' -P '*>  '"
-set $menu "fuzzel -f 'Terminus (TTF):size=12' -P '*>  '"
+set $menu "fuzzel -f 'Monoid:size=10' -P '*>  '"
 
 ### Output configuration
 #
