--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -8,7 +8,7 @@
 
 	// Choose the order of the modules
 	"modules-left": ["clock", "battery"],
-	"modules-center": ["sway/window"],
+	// "modules-center": ["sway/window"],
 	"modules-right": ["sway/mode", "sway/workspaces"],
 
 	// Modules configuration
@@ -40,7 +40,7 @@
 
     "clock": {
         // "timezone": "America/New_York",
-        "tooltip-format": "{%H:%M}",
+        "format": "{:%b %d | %H:%M}",
         "format-alt": "{:%Y-%m-%d}"
     },
 
