--- a/.config/fnott/fnott.ini
+++ b/.config/fnott/fnott.ini
@@ -16,26 +16,26 @@ max-icon-size=32
 # play-sound=aplay ${filename}
 
 # Default values, may be overridden in 'urgency' specific sections
-background=3f5f3f
-border-color=909090
+background=3f5f3f00
+border-color=90909000
 border-size=1
-title-font="Terminus (TTF):style=Bold:size=12"
-title-color=ffffff
-summary-font="Terminus (TTF):size=9"
-summary-color=ffffff
-body-font="Terminus (TTF):size=9"
-body-color=ffffff
+title-font=Hack:style=bold:size=12
+title-color=ffffff00
+summary-font=Hack:size=9
+summary-color=ffffff00
+body-font=Hack:size=9
+body-color=ffffff00
 # timeout
 default-timeout=10
 # sound-file=
 
 [low]
-background=2b2b2b
-title-color=888888
-summary-color=888888
-body-color=888888
+background=2b2b2b00
+title-color=88888800
+summary-color=88888800
+body-color=88888800
 
 # [normal]
 
 [critical]
-background=6c3333
+background=6c333300
