--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,7 +9,7 @@ app-id=foot
 title=foot
 locked-title=yes
 
-font=Roboto Mono:size=7.5
+font=Monoid:size=6.5
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
@@ -67,24 +67,25 @@ multiplier=3.0
 
 [colors]
 alpha=1.0
-foreground=000000
-background=ffffff
+background=000000
+foreground=ffffff
 regular0=000000
-regular1=a60000
-regular2=006800
-regular3=813e00
-regular4=0030a6
-regular5=721045
-regular6=00538b
+regular1=ff8059
+regular2=00fc50
+regular3=eecc00
+regular4=29aeff
+regular5=feacd0
+regular6=00d3d0
 regular7=eeeeee
 bright0=555555
-bright1=7f1010
-bright2=104410
-bright3=5f4400
-bright4=002f88
-bright5=752f50
-bright6=12506f
+bright1=ffa0a0
+bright2=88cf88
+bright3=d2b580
+bright4=92baff
+bright5=e0b2d6
+bright6=a0bfdf
 bright7=ffffff
+
 
 # 16 = <256-color palette #16>
 # ...
