--- a/.config/sway/config
+++ b/.config/sway/config
@@ -14,7 +14,8 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term alacritty
+# set $term alacritty
+set $term foot
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -132,29 +133,32 @@ input * xkb_numlock enable
 # Workspaces:
 #
     # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    # bindsym $mod+6 workspace number 6
-    # bindsym $mod+7 workspace number 7
-    # bindsym $mod+8 workspace number 8
-    # bindsym $mod+9 workspace number 9
-    # bindsym $mod+0 workspace number 10
-    # Move focused container to workspace
+    # bindsym $mod+1 workspace number 1
+    # bindsym $mod+2 workspace number 2
+    # bindsym $mod+3 workspace number 3
+    # bindsym $mod+4 workspace number 4
+    # bindsym $mod+5 workspace number 5
+
+    # sov is sway overview for workspaces
+    bindsym --no-repeat $mod+1 workspace number 1; exec "echo 1 > /tmp/sovpipe"
+    bindsym --no-repeat $mod+2 workspace number 2; exec "echo 1 > /tmp/sovpipe"
+    bindsym --no-repeat $mod+3 workspace number 3; exec "echo 1 > /tmp/sovpipe"
+    bindsym --no-repeat $mod+4 workspace number 4; exec "echo 1 > /tmp/sovpipe"
+    bindsym --no-repeat $mod+5 workspace number 5; exec "echo 1 > /tmp/sovpipe"
+
+    bindsym --release $mod+1 exec "echo 0 > /tmp/sovpipe"
+    bindsym --release $mod+2 exec "echo 0 > /tmp/sovpipe"
+    bindsym --release $mod+3 exec "echo 0 > /tmp/sovpipe"
+    bindsym --release $mod+4 exec "echo 0 > /tmp/sovpipe"
+    bindsym --release $mod+5 exec "echo 0 > /tmp/sovpipe"
+
+    # Move window to workspace
     bindsym $mod+Shift+1 move container to workspace number 1
     bindsym $mod+Shift+2 move container to workspace number 2
     bindsym $mod+Shift+3 move container to workspace number 3
     bindsym $mod+Shift+4 move container to workspace number 4
     bindsym $mod+Shift+5 move container to workspace number 5
-    # bindsym $mod+Shift+6 move container to workspace number 6
-    # bindsym $mod+Shift+7 move container to workspace number 7
-    # bindsym $mod+Shift+8 move container to workspace number 8
-    # bindsym $mod+Shift+9 move container to workspace number 9
-    # bindsym $mod+Shift+0 move container to workspace number 10
-    # Note: workspaces can have any name you want, not just numbers.
-    # We just use 1-10 as the default.
+
 #
 # Layout stuff:
 #
@@ -220,12 +224,12 @@ bindsym $mod+r mode "resize"
 #
 # FN keys:
 #
-bindsym XF86MonBrightnessDown exec "light -U 10"
-bindsym XF86MonBrightnessUp exec "light -A 10"
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%- | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
+bindsym XF86MonBrightnessUp exec brightnessctl set +5% | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
 
-bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
-bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
-bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
 
 #
 # Status Bar:
@@ -253,11 +257,15 @@ bar {
 #
 
 default_border pixel 2
-default_floating_border pixel 2
-# gaps inner 3px
-# gaps outer 3px
 smart_gaps on
 smart_borders on
+hide_edge_borders vertical
+
+default_floating_border pixel 2
+
+# gaps
+gaps inner 5px
+gaps outer 0px
 
 # colours
 # class       		 	border   background  text     indicator
@@ -270,8 +278,16 @@ client.urgent            	#ffff00  #ffff00     #ffffff  #ffff00
 # Autostart?
 #
 
+exec rm -f /tmp/sovpipe && mkfifo /tmp/sovpipe && tail -f /tmp/sovpipe | sov
 exec light -S 30% &
-exec fnott &
+# fnott starts with this command but segfaults
+# see https://codeberg.org/dnkl/fnott/issues/66
+# exec fnott &
+exec mako &
 exec rdshft &
+
+# wob - overlay bar for volume/brightness
+set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
+exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
 
 include /usr/local/etc/sway/config.d/*
