Misc & thematic changes - waybar revert to plain off-white theme

--- a/.config/foot/foot.ini
+++ b/.config/foot/foot.ini
@@ -9,7 +9,7 @@ app-id=foot
 title=foot
 locked-title=yes
 
-font=Monoid:size=6.5
+font=Anka/Coder Condensed:size=7
 # font-bold=<bold variant of regular font>
 # font-italic=<italic variant of regular font>
 # font-bold-italic=<bold+italic variant of regular font>
