add readme, several misc updates to sway config

--- a/.config/fnott/fnott.ini
+++ b/.config/fnott/fnott.ini
@@ -20,6 +20,7 @@ background=3f5f3f00
 border-color=90909000
 border-size=1
 title-font=Hack:style=bold:size=12
+body-font=Hack:size=10
 title-color=ffffff00
 summary-font=Hack:size=9
 summary-color=ffffff00
